tests/invalid/component_method_not_allowed.wio
component Utility {
    fn Identity(value: i32) -> i32 {
        return value;
    }
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
